feat(action): add ATTACK_AND_CAPTURE action